k3s/2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auction-backend
  template:
    metadata:
      labels:
        app: auction-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/donneypr/eecs4413_auction-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          command: ["gunicorn"]
          args:
            - "core.wsgi:application"
            - "--bind"
            - "0.0.0.0:8000"
            - "--workers"
            - "3"
            - "--timeout"
            - "90"
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: backend-svc
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: default
spec:
  selector:
    app: auction-backend
  ports:
    - port: 8000
      targetPort: 8000
