k3s/4-ingress.yaml
# Frontend (no rewrite)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auction-frontend
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: donney.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 3000
---
# # Backend (/api) with strip-prefix middleware
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: auction-backend
#   namespace: default
#   annotations:
#     traefik.ingress.kubernetes.io/router.middlewares: default-strip-api@kubernetescrd
# spec:
#   ingressClassName: traefik
#   rules:
#   - host: donney.ddns.net
#     http:
#       paths:
#       - path: /api
#         pathType: Prefix
#         backend:
#           service:
#             name: backend-svc
#             port:
#               number: 8000
